disable dark mode and fix bug(table width): disable scrollable table

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,6 @@
-@media (prefers-color-scheme: dark) {
-  .astro-code,
-  .astro-code span {
-    color: var(--shiki-dark) !important;
-    /* background-color: var(--shiki-dark-bg) !important; */
-    /* Optional, if you also want font styles */
-    font-style: var(--shiki-dark-font-style) !important;
-    font-weight: var(--shiki-dark-font-weight) !important;
-    text-decoration: var(--shiki-dark-text-decoration) !important;
+@media (prefers-color-scheme: light) {
+  .astro-code {
+    @apply bg-white text-black;
   }
 }
 
@@ -14,7 +8,7 @@ body {
   font-family: "Noto Sans", sans-serif;
 }
 a {
-  @apply text-blue-500 dark:text-blue-300 hover:underline;
+  @apply text-blue-500 hover:underline;
 }
 p {
   @apply text-lg w-full;
@@ -32,10 +26,10 @@ h4 {
   @apply w-full font-bold;
 }
 table {
-  @apply border-y-2 border-black dark:border-zinc-50;
+  @apply border-y-2 border-black;
 }
 thead {
-  @apply border-b border-black dark:border-zinc-50;
+  @apply border-b border-black;
 }
 th,
 td {
